feat: alterações de código e base (clonada da branchJhenyf)
